BaSP-W03-2023: Index Updated.. Styles Updated.

--- a/Week-03/index.html
+++ b/Week-03/index.html
@@ -24,34 +24,45 @@
                 <h3>
                     Menu
                 </h3>
-                <div>
-                    <input type="text" placeholder="Home">
-                        <a href="#"></a>
-                    <input type="text" placeholder="Sing Up">
-                        <a href="#"></a>
-                    <input type="text" placeholder="Log In">
-                        <a href="#"></a>
-                    <input type="text" placeholder="Info">
-                        <a href="#"></a>
-                    </li>
-                </div>
-                <div class="sidebar-contact">
-                    <h4>    
-                        Contact Us
-                    </h4>          
-                    <img src="../Assets/Images/mail.png" alt="a letter icon">
-                    <li>
-                        information@untitled.tld
-                    </li>
-                    <img src="../Assets/Images/Cellphone.png" alt="a celphone icon">
-                    <li>        
-                        (000) 00000-0000
-                    </li>
-                    <img src="../Assets/Images/Address.png" alt="an address icon">    
-                    <li>     
-                        1233 Somewhere Road #8254Nashville, TN 00000-0000
-                    </li>  
-                </div>
+                <nav>
+                    <div class="sidebar-menu">
+                        <ul>
+                            <li>
+                                <a href="#">Home</a>
+                            </li>
+                            <li>
+                                <a href="#">Sing Up</a>
+                            </li>
+                            <li>   
+                                <a href="#">Log In</a>
+                            </li>
+                            <li>
+                                <a href="#">Info</a>
+                            </li> 
+                        </ul>       
+                    </div>
+                    <div class="sidebar-contact">
+                        <h4>    
+                            Contact Us
+                        </h4>
+                        <div class="contac-img"> 
+                            <img src="../Assets/Images/mail.png" alt="a letter icon">
+                            <img src="../Assets/Images/Cellphone.png" alt="a celphone icon">
+                            <img src="../Assets/Images/Address.png" alt="an address icon">
+                        </div>         
+                        <ul class="contac-id">
+                            <li>
+                                information@untitled.tld
+                            </li>
+                            <li>        
+                                (000) 00000-0000
+                            </li>
+                            <li>     
+                                1233 Somewhere Road #8254Nashville, TN 00000-0000
+                            </li> 
+                        </ul>
+                    </div>
+                </nav>    
             </aside>    
         <main>
             <section class="strong">
@@ -72,15 +83,13 @@
                         Join us and star your to a healthier, stronger you!
                     </p>
                 </div>
-                <div class="training">
-                    <img src="../Assets/Images/training.png" alt="a person training image">                  
-                </div>
+                <img src="../Assets/Images/training.png" alt="a person training image">
             </section>  
             <section class="option-containers">
                 <div class="options">
                     <img src="../Assets/Images/Appointment.png" alt="an appointment icon">
                     <h3>
-                        <input type="text" placeholder="Make an appointment"> 
+                        Make an appointment
                     </h3>
                     <p>
                         Choose the membership plan that fits your lifestyle and fitness goals. From basic to premium, we have options to every
@@ -118,7 +127,7 @@
                     </p>
                 </div>    
             </section>
-            <section>
+            <section class="box-forms">
                 <form class="form-group">
                     <h3>
                         You have questions, ask away and get your answers
@@ -151,7 +160,7 @@
                     </div>
                 </form>
             </section> 
-            <section>
+            <section class="box-history">
                 <div class="history">
                     <h3>
                         our history
@@ -164,7 +173,9 @@
             </section>
             <section class="activities">
                 <div>
-                    <input type="submit" value="Our activities">
+                    <h4>
+                        Our activities
+                    </h4>
                     <ol>
                         <li>Crossfit</li>
                         <li>Spinning</li>
@@ -174,7 +185,9 @@
                     </ol>
                 </div>
                 <div>
-                    <input type="submit" value="Black Membership">
+                    <h4>
+                        Black Membership
+                    </h4>
                     <ul>
                         <li>Free access to BB class</li>
                         <li>Free access to classes without making appointment</li>
@@ -183,7 +196,9 @@
                     </ul>
                 </div>
                 <div>
-                    <input type="submit" value="Classic Membership">
+                    <h4>
+                        Classic Membership
+                    </h4>
                     <ul>
                         <li>Free pass to weight room</li>
                         <li>Monitored by a personal coach</li>
@@ -191,7 +206,9 @@
                     </ul>
                 </div>
                 <div>
-                    <input type="submit" value="Only Classes Membership">
+                    <h4>
+                        Only Classes mempership
+                    </h4>
                     <ul>
                         <li>Free pass to classes with prior appointment</li>
                         <li>Displayed schedule</li>
