--- a/Week-03/index.html
+++ b/Week-03/index.html
@@ -25,8 +25,8 @@
                     Menu
                 </h3>
                 <nav>
-                    <div class="sidebar-menu">
-                        <ul>
+                    <div>
+                        <ul class="list-menu">
                             <li>
                                 <a href="#">Home</a>
                             </li>
