BaSP-W04-2023: Mobile first started. new styles.css created. W04.

--- a/Week-04/index.html
+++ b/Week-04/index.html
@@ -5,38 +5,41 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>MegaRocket-Eliezer Alberto</title>
-        <link rel="stylesheet" href="../Week-03/css/reset.css">
-        <link rel="stylesheet" href="../Week-03/css/styles.css">
+        <link rel="stylesheet" href="../Week-04/css/reset.css">
+        <link rel="stylesheet" href="../Week-04/css/styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E">
         <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,500;0,700;0,900;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <head>
-    <body class="body">    
+    <body>    
         <header>
-            <h1 class="header-logo">
-                <img src="../Assets/Images/Logo.png" alt="MegaRocket">
-            </h1>
             <h1 class="btn-menu">
                 <img src="../Assets/Images/Icon.png" alt="a menu icon">
             </h1>
+            <h1 class="header-logo">
+                <img src="../Assets/Images/Logo.png" alt="MegaRocket">
+            </h1>
         </header>
             <aside>
-                <h3>
-                    Menu
-                </h3>
+                <div class="side-bar">
+                    <h3>
+                        Menu
+                    </h3>
+                    <img src="../Assets/Images/Icon-2.png">
+                </div>    
                 <nav>
                     <div class="sidebar-menu">
                         <ul>
                             <li class="menu-li">
                                 <a href="#">Home</a>
                             </li>
-                            <li>
+                            <li class="menu-li">
                                 <a href="#">Sing Up</a>
                             </li>
-                            <li>   
+                            <li class="menu-li">   
                                 <a href="#">Log In</a>
                             </li>
-                            <li>
+                            <li class="menu-li">
                                 <a href="#">Info</a>
                             </li> 
                         </ul>       
@@ -45,28 +48,28 @@
                         <h4>    
                             Contact Us
                         </h4>
-                        <div class="contac-img"> 
-                            <img src="../Assets/Images/mail.png" alt="a letter icon">
-                            <img src="../Assets/Images/Cellphone.png" alt="a celphone icon">
-                            <img src="../Assets/Images/Address.png" alt="an address icon">
-                        </div>         
-                        <ul class="contac-id">
-                            <li>
-                                information@untitled.tld
-                            </li>
-                            <li>        
-                                (000) 00000-0000
-                            </li>
-                            <li>     
-                                1233 Somewhere Road #8254Nashville, TN 00000-0000
-                            </li> 
-                        </ul>
+                        <div class="contact-img"> 
+                            <ul class="contact-id">      
+                                <img src="../Assets/Images/mail.png" alt="a letter icon">
+                                <li>
+                                    information@untitled.tld
+                                </li>
+                                <img src="../Assets/Images/Cellphone.png" alt="a celphone icon">
+                                <li>        
+                                    (000) 00000-0000
+                                </li>
+                                <img src="../Assets/Images/Address.png" alt="an address icon">
+                                <li>     
+                                    1233 Somewhere Road #8254Nashville, TN 00000-0000
+                                </li> 
+                            </ul>
+                        </div>
                     </div>
                 </nav>    
             </aside>    
         <main>
             <section class="strong">
-                <div class="getfit">
+                <div class="get-fit">
                     <h2>
                         get fit, get strong
                     </h2>
