BaSP-W04-2023: Mobile Updated. Styles.css updated.

--- a/Week-04/index.html
+++ b/Week-04/index.html
@@ -88,7 +88,7 @@
                 </div>
                 <img src="../Assets/Images/training.png" alt="a person training image">
             </section>  
-            <section class="option-containers">
+            <section class="option-container">
                 <div class="options">
                     <img src="../Assets/Images/Appointment.png" alt="an appointment icon">
                     <h3>
@@ -135,7 +135,7 @@
                     <h3>
                         You have questions, ask away and get your answers
                     </h3>
-                    <div>
+                    <div class="form-data">
                         <input type="text" placeholder="Name"> 
                         <input type="text" placeholder="Surname">
                         <input type="text" placeholder="E-mail adress">     
@@ -175,44 +175,44 @@
                  </div>
             </section>
             <section class="activities">
-                <div>
+                <div class="activities-box">
                     <h4>
                         Our activities
                     </h4>
                     <ol>
-                        <li>Crossfit</li>
-                        <li>Spinning</li>
-                        <li>Functional</li>
-                        <li>Boxing</li>
-                        <li>Weightlifting</li>
+                        <li class="activities-li">Crossfit</li>
+                        <li class="activities-li">Spinning</li>
+                        <li class="activities-li">Functional</li>
+                        <li class="activities-li">Boxing</li>
+                        <li class="activities-li">Weightlifting</li>
                     </ol>
                 </div>
-                <div>
+                <div class="memberships">
                     <h4>
                         Black Membership
                     </h4>
-                    <ul>
+                    <ul class="memberships-li">
                         <li>Free access to BB class</li>
                         <li>Free access to classes without making appointment</li>
                         <li>Personalized follow up with personal trainer</li>
                         <li>Grid display</li>
                     </ul>
                 </div>
-                <div>
+                <div class="memberships">
                     <h4>
                         Classic Membership
                     </h4>
-                    <ul>
+                    <ul class="memberships-li">
                         <li>Free pass to weight room</li>
                         <li>Monitored by a personal coach</li>
                         <li>Displayed schedule</li>
                     </ul>
                 </div>
-                <div>
+                <div class="memberships">
                     <h4>
                         Only Classes mempership
                     </h4>
-                    <ul>
+                    <ul class="memberships-li">
                         <li>Free pass to classes with prior appointment</li>
                         <li>Displayed schedule</li>
                     </ul>
@@ -224,9 +224,9 @@
                     Copyright © 2023 MegaRocket SA. All rights reserved.
                 </h5> 
                 <div class="social">
-                <a href="https://www.facebook.com/"><img src="../Assets/Images/Facebook.png" alt="Facebooc icon"></a>
-                <a href="https://www.instagram.com/"><img src="../Assets/Images/Instagram.png" alt="Instagram icon"></a>
-                <a href="https://www.linkedin.com/"><img src="../Assets/Images/LinkedIn.png" alt="LinkedIn icon"></a>
+                    <a href="https://www.linkedin.com/"><img src="../Assets/Images/LinkedIn.png" alt="LinkedIn icon"></a>
+                    <a href="https://www.facebook.com/"><img src="../Assets/Images/Facebook.png" alt="Facebooc icon"></a>
+                    <a href="https://www.instagram.com/"><img src="../Assets/Images/Instagram.png" alt="Instagram icon"></a>
                 </div>   
             </footer>
         </body>
