--- a/Week-04/index.html
+++ b/Week-04/index.html
@@ -139,7 +139,7 @@
                         <input type="text" placeholder="Name"> 
                         <input type="text" placeholder="Surname">
                         <input type="text" placeholder="E-mail adress">     
-                        <select>
+                        <select class="select">
                             <option>
                                 Select a motive
                             </option>
@@ -154,12 +154,11 @@
                             </option>
                         </select>
                     </div>   
-                    <div class="form-group"> 
-                        <textarea 
-                            name="Description" placeholder="Your massage ...">
-                        </textarea> 
-                        <img src="../Assets/Images/Clear.png" alt="a cross icon">
-                        <img src="../Assets/Images/Send.png" alt="a send icon">                           
+                    <textarea class="text-area" name="Description" placeholder="Your massage ...">
+                    </textarea>
+                    <div class="form-buttons">
+                        <button><img src="../Assets/Images/Clear.png" alt="a cross icon"></button>
+                        <button><img src="../Assets/Images/Send.png" alt="a send icon"></button>
                     </div>
                 </form>
             </section> 
@@ -205,7 +204,7 @@
                     <ul class="memberships-li">
                         <li>Free pass to weight room</li>
                         <li>Monitored by a personal coach</li>
-                        <li>Displayed schedule</li>
+                        <li>Grid display</li>
                     </ul>
                 </div>
                 <div class="memberships">
@@ -214,7 +213,7 @@
                     </h4>
                     <ul class="memberships-li">
                         <li>Free pass to classes with prior appointment</li>
-                        <li>Displayed schedule</li>
+                        <li>Grid Display</li>
                     </ul>
                 </div>   
             </section>
