BaSP-W04-2023: Mobile Finished, stylesheet modified, queries added.

--- a/Week-04/index.html
+++ b/Week-04/index.html
@@ -90,10 +90,12 @@
             </section>  
             <section class="option-container">
                 <div class="options">
-                    <img src="../Assets/Images/Appointment.png" alt="an appointment icon">
-                    <h3>
-                        Make an appointment
-                    </h3>
+                    <div class="titles">
+                        <img src="../Assets/Images/Appointment.png" alt="an appointment icon">
+                        <h3>
+                            Make an appointment
+                        </h3>
+                    </div>
                     <p>
                         Choose the membership plan that fits your lifestyle and fitness goals. From basic to premium, we have options to every
                         budget and level of commitment
@@ -154,7 +156,8 @@
                             </option>
                         </select>
                     </div>   
-                    <textarea class="text-area" name="Description" placeholder="Your massage ...">
+                    <textarea 
+                        class="text-area" name="Description" placeholder="Your massage ...">
                     </textarea>
                     <div class="form-buttons">
                         <button><img src="../Assets/Images/Clear.png" alt="a cross icon"></button>
