BaSP-W04-2023: Breakpoint 600px finished. 1024px Desktop added.

--- a/Week-04/index.html
+++ b/Week-04/index.html
@@ -102,30 +102,36 @@
                     </p>
                 </div>
                 <div class="options">
-                    <img src="../Assets/Images/Membership.png" alt="a membership icon">
-                    <h3>
-                        Our memberships
-                    </h3>
+                    <div class="titles">
+                        <img src="../Assets/Images/Membership.png" alt="a membership icon">
+                        <h3>
+                            Our memberships
+                        </h3>
+                    </div>
                     <p>
                         Choose the membership plan that fits your lifestyle and fitness goals.
                         From basic to premium, we have options to every budget and level of commitment
                     </p>
                 </div>
                 <div class="options">   
-                    <img src="../Assets/Images/Member.png" alt="a member icon">
-                    <h3>
-                        Become a Member
-                    </h3> 
+                    <div class="titles">
+                        <img src="../Assets/Images/Member.png" alt="a member icon">
+                        <h3>
+                            Become a Member
+                        </h3> 
+                    </div>
                     <p>
                         Join ouw fitness community and take advantage of all the perks of being a member.
                         We offer a range of benefits to help you reach your fitness potential.
                     </p>
                 </div>
                 <div class="options">
-                    <img src="../Assets/Images/Suggestion.png" alt="a suggestion icon">
-                    <h3>
-                        Suggestions
-                    </h3>
+                    <div class="titles">
+                        <img src="../Assets/Images/Suggestion.png" alt="a suggestion icon">
+                        <h3>
+                            Suggestions
+                        </h3>
+                    </div>
                     <p>
                         We're always looking for ways to improve our gym experience. Have a suggestion?
                         We want to hear from you! Share your feedback with us and help us make our gym the best it can be for our members            
@@ -178,10 +184,10 @@
             </section>
             <section class="activities">
                 <div class="activities-box">
-                    <h4>
+                    <h3>
                         Our activities
-                    </h4>
-                    <ol>
+                    </h3>
+                    <ol class="activity-list">
                         <li class="activities-li">Crossfit</li>
                         <li class="activities-li">Spinning</li>
                         <li class="activities-li">Functional</li>
