BaSP-W04-2023: Almost finished.

--- a/Week-04/index.html
+++ b/Week-04/index.html
@@ -98,7 +98,7 @@
                     </div>
                     <p>
                         Choose the membership plan that fits your lifestyle and fitness goals. From basic to premium, we have options to every
-                        budget and level of commitment
+                        budget and level of commitment.
                     </p>
                 </div>
                 <div class="options">
@@ -110,7 +110,7 @@
                     </div>
                     <p>
                         Choose the membership plan that fits your lifestyle and fitness goals.
-                        From basic to premium, we have options to every budget and level of commitment
+                        From basic to premium, we have options to every budget and level of commitment.
                     </p>
                 </div>
                 <div class="options">   
@@ -134,7 +134,7 @@
                     </div>
                     <p>
                         We're always looking for ways to improve our gym experience. Have a suggestion?
-                        We want to hear from you! Share your feedback with us and help us make our gym the best it can be for our members            
+                        We want to hear from you! Share your feedback with us and help us make our gym the best it can be for our members.        
                     </p>
                 </div>    
             </section>
