--- a/Week-05/index.html
+++ b/Week-05/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercises J.S</title>
     <script src="../Week-05/exercises/01-variables-and-operators.js"></script>
+    <script src="../Week-05/exercises/02-strings.js"></script>
 </head>
 <body>
     <header>
         <h1>
-            Hello Radium
+            Become a Software Professional
         </h1>
     </header>
 </body>
