BaSP-W05-2023: CSS and Readme of Week-04 update.

--- a/Week-04/index.html
+++ b/Week-04/index.html
@@ -11,13 +11,13 @@
         <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,500;0,700;0,900;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <head>
-    <body class="body">    
+    <body class="body">
         <header>
             <h1 class="header-logo">
-                <img src="../Assets/Images/Logo.png" alt="MegaRocket">
+                <img src="../Assets/Images/logo.png" alt="MegaRocket">
             </h1>
             <h1 class="btn-menu">
-                <img src="../Assets/Images/Icon.png" alt="a menu icon">
+                <img src="../Assets/Images/icon.png" alt="a menu icon">
             </h1>
         </header>
         <aside>
@@ -25,8 +25,8 @@
                 <h3>
                     Menu
                 </h3>
-                <img src="../Assets/Images/Icon-2.png">
-            </div>    
+                <img src="../Assets/Images/icon-2.png">
+            </div>
             <nav>
                 <div class="sidebar-menu">
                     <ul>
@@ -36,37 +36,39 @@
                         <li class="menu-li">
                             <a href="#">Sing Up</a>
                         </li>
-                        <li class="menu-li">   
+                        <li class="menu-li">
                             <a href="#">Log In</a>
                         </li>
                         <li class="menu-li">
                             <a href="#">Info</a>
-                        </li> 
-                    </ul>       
+                        </li>
+                    </ul>
                 </div>
                 <div class="sidebar-contact">
-                    <h4>    
+                    <h4>
                         Contact Us
                     </h4>
-                    <div class="contact-img"> 
-                        <ul class="contact-id">      
-                            <img src="../Assets/Images/mail.png" alt="a letter icon">
-                            <li>
-                                information@untitled.tld
-                            </li>
-                            <img src="../Assets/Images/Cellphone.png" alt="a celphone icon">
-                            <li>        
-                                (000) 00000-0000
-                            </li>
-                            <img src="../Assets/Images/Address.png" alt="an address icon">
-                            <li>     
-                                1233 Somewhere Road #8254Nashville, TN 00000-0000
-                            </li> 
+                    <div class="contact-img">
+                        <ul class="contact-id">
+                            <div class="contact-img">
+                                <img src="../Assets/Images/mail.png" alt="a letter icon">
+                                <li>
+                                    information@untitled.tld
+                                </li>
+                                <img src="../Assets/Images/cellphone.png" alt="a celphone icon">
+                                <li>
+                                    (000) 00000-0000
+                                </li>
+                                <img src="../Assets/Images/address.png" alt="an address icon">
+                                <li>
+                                    1233 Somewhere Road #8254Nashville, TN 00000-0000
+                                </li>
+                            </div>
                         </ul>
                     </div>
                 </div>
-            </nav>    
-        </aside>    
+            </nav>
+        </aside>
         <main>
             <section class="strong">
                 <div class="get-fit">
@@ -79,19 +81,19 @@
                     <p>
                         We offer a wide range of fitness classes and state-of-the-art equipement to help you reach your fitness goals.
                     </P>
-                    <P>
+                    <p>
                         Our expert trainers are here to guide and motivate you every step of the way.
-                    </P>
-                    <P>
+                    </p>
+                    <p>
                         Join us and star your to a healthier, stronger you!
                     </p>
                 </div>
                 <img src="../Assets/Images/training.png" alt="a person training image">
-            </section>  
+            </section>
             <section class="option-container">
                 <div class="options">
                     <div class="titles">
-                        <img src="../Assets/Images/Appointment.png" alt="an appointment icon">
+                        <img src="../Assets/Images/appointment.png" alt="an appointment icon">
                         <h3>
                             Make an appointment
                         </h3>
@@ -103,7 +105,7 @@
                 </div>
                 <div class="options">
                     <div class="titles">
-                        <img src="../Assets/Images/Membership.png" alt="a membership icon">
+                        <img src="../Assets/Images/membership.png" alt="a membership icon">
                         <h3>
                             Our memberships
                         </h3>
@@ -113,12 +115,12 @@
                         From basic to premium, we have options to every budget and level of commitment.
                     </p>
                 </div>
-                <div class="options">   
+                <div class="options">
                     <div class="titles">
-                        <img src="../Assets/Images/Member.png" alt="a member icon">
+                        <img src="../Assets/Images/member.png" alt="a member icon">
                         <h3>
                             Become a Member
-                        </h3> 
+                        </h3>
                     </div>
                     <p>
                         Join ouw fitness community and take advantage of all the perks of being a member.
@@ -127,16 +129,16 @@
                 </div>
                 <div class="options">
                     <div class="titles">
-                        <img src="../Assets/Images/Suggestion.png" alt="a suggestion icon">
+                        <img src="../Assets/Images/suggestion.png" alt="a suggestion icon">
                         <h3>
                             Suggestions
                         </h3>
                     </div>
                     <p>
                         We're always looking for ways to improve our gym experience. Have a suggestion?
-                        We want to hear from you! Share your feedback with us and help us make our gym the best it can be for our members.        
+                        We want to hear from you! Share your feedback with us and help us make our gym the best it can be for our members.
                     </p>
-                </div>    
+                </div>
             </section>
             <section class="box-forms">
                 <form class="form-group">
@@ -144,9 +146,9 @@
                         You have questions, ask away and get your answers
                     </h3>
                     <div class="form-data">
-                        <input type="text" placeholder="Name"> 
+                        <input type="text" placeholder="Name">
                         <input type="text" placeholder="Surname">
-                        <input type="text" placeholder="E-mail adress">     
+                        <input type="text" placeholder="E-mail adress">
                         <select class="select">
                             <option>
                                 Select a motive
@@ -161,23 +163,23 @@
                                 I want to submit a complain.
                             </option>
                         </select>
-                    </div>   
-                    <textarea 
+                    </div>
+                    <textarea
                         class="text-area" name="Description" placeholder="Your massage ...">
                     </textarea>
                     <div class="form-buttons">
-                        <button><img src="../Assets/Images/Clear.png" alt="a cross icon"></button>
-                        <button><img src="../Assets/Images/Send.png" alt="a send icon"></button>
+                        <button><img src="../Assets/Images/clear.png" alt="a cross icon"></button>
+                        <button><img src="../Assets/Images/send.png" alt="a send icon"></button>
                     </div>
                 </form>
-            </section> 
+            </section>
             <section class="box-history">
                 <div class="history">
                     <h3>
                         our history
                     </h3>
                     <p>
-                        Our journey began with a passion for fitness and a desire to create a community where individuals could come together to achieve their health and wellness goals. 
+                        Our journey began with a passion for fitness and a desire to create a community where individuals could come together to achieve their health and wellness goals.
                         We wanted to bild a gym that was more t....
                     </p>
                  </div>
@@ -224,18 +226,18 @@
                         <li>Free pass to classes with prior appointment</li>
                         <li>Grid Display</li>
                     </ul>
-                </div>   
+                </div>
             </section>
         </main>
             <footer class="footer">
                 <h5>
                     Copyright © 2023 MegaRocket SA. All rights reserved.
-                </h5> 
+                </h5>
                 <div class="social">
-                    <a href="https://www.linkedin.com/"><img src="../Assets/Images/LinkedIn.png" alt="LinkedIn icon"></a>
-                    <a href="https://www.facebook.com/"><img src="../Assets/Images/Facebook.png" alt="Facebooc icon"></a>
-                    <a href="https://www.instagram.com/"><img src="../Assets/Images/Instagram.png" alt="Instagram icon"></a>
-                </div>   
+                    <a href="https://www.linkedin.com/"><img src="../Assets/Images/linkedin.png" alt="LinkedIn icon"></a>
+                    <a href="https://www.facebook.com/"><img src="../Assets/Images/facebook.png" alt="Facebooc icon"></a>
+                    <a href="https://www.instagram.com/"><img src="../Assets/Images/instagram.png" alt="Instagram icon"></a>
+                </div>
             </footer>
         </body>
 </html>
