BaSP-W05-2023: Readme, index and CSS of week-04 update.

--- a/Week-04/index.html
+++ b/Week-04/index.html
@@ -17,7 +17,7 @@
                 <img src="../Assets/Images/logo.png" alt="MegaRocket">
             </h1>
             <h1 class="btn-menu">
-                <img src="../Assets/Images/icon.png" alt="a menu icon">
+                <img src="/Assets/Images/icon.png" alt="a menu icon">
             </h1>
         </header>
         <aside>
@@ -234,7 +234,7 @@
                     Copyright © 2023 MegaRocket SA. All rights reserved.
                 </h5>
                 <div class="social">
-                    <a href="https://www.linkedin.com/"><img src="../Assets/Images/linkedin.png" alt="LinkedIn icon"></a>
+                    <a href="https://www.linkedin.com/"><img src="../Assets/Images/linkedIn.png" alt="LinkedIn icon"></a>
                     <a href="https://www.facebook.com/"><img src="../Assets/Images/facebook.png" alt="Facebooc icon"></a>
                     <a href="https://www.instagram.com/"><img src="../Assets/Images/instagram.png" alt="Instagram icon"></a>
                 </div>
